--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body class="bg-white text-black font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://kit.fontawesome.com/b6f27b6017.js" crossorigin="anonymous"></script>
   </body>
 </html>
